--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -537,7 +537,7 @@ Note: cases whose hospitals were pending at time of press release and those who 
 hosp_cases = df[!(tolower(hospital) %in% c("unknown", "", "not admitted")), 
                 list(cases=.N), by=c("confirmed.at.date", "hospital")]
 renderPlot({
-  ggplot(data=hosp_cases, aes(x=confirmed.at.date, y=cases*hosp_scale) +
+  ggplot(data=hosp_cases, aes(x=confirmed.at.date, y=cases) +
     geom_line(show.legend=F, color=cbp1[6], size=1) +
     geom_bar(stat="identity", fill=cbp1[3], color=NA, alpha=0.6) +
     facet_wrap(~hospital) +
