--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -226,13 +226,36 @@ renderPlot({
   data2 = merge(data2, labels[grepl("1|3|4", related)], 
                 by.x=c("confirmed.at.date", "patient.citizen"), 
                 by.y=c("date", "patient.citizen"), all.x=T, all.y=T)
-  print(data2)
 
   data2$patient.citizen = factor(data2$patient.citizen,
       levels=c("citizen", "pr", "ep", "sp", "wp", "lp", "visitor", "unknown"),
       labels=c("Citizen", "PR", "EP", "SP", "WP", "LP", "Visitor", "Unknown"))   
 
-  plt2 = ggplot(data=data2, aes(x=confirmed.at.date, y=N, fill=patient.citizen, label=no)) +
+  plt2a = ggplot(data=data2, aes(x=confirmed.at.date, y=N, fill=patient.citizen, label=no)) +
+    geom_bar(position='stack', stat="identity") + 
+    
+    theme +
+    theme(legend.position="bottom", legend.box = "horizontal", 
+          axis.text.x=element_text(angle = 90)) + 
+
+    xlab("") + ylab("Number of cases\n(by status)\n") + 
+    ggtitle("Community spread (citizens, PRs, WP/SP/LP not in dorm/construction clusters)") +
+
+    scale_fill_brewer(palette = "Blues", direction=-1) +
+    guides(fill=guide_legend(title="")) + 
+
+    scale_y_continuous(breaks=breaks_f) +
+    scale_x_date(date_breaks = "week", date_minor_breaks = "1 day", date_labels = "%d-%b",
+                 limits=c(min_date, max_date)) +
+    
+    geom_label_repel(nudge_y=100, direction="x", angle=90, vjust=0, force=2, 
+                     fontface='bold', color="black", size=3, fill="white",
+                     segment.size=0.5, segment.color='black', 
+                     box.padding = unit(0.4, 'lines'), 
+                     arrow = arrow(length = unit(1, "mm")),
+                     point.padding = 0, max.iter=3000, show.legend=F)
+
+  plt2b = ggplot(data=data2, aes(x=confirmed.at.date, y=N, fill=infection.type, label=no)) +
     geom_bar(position='stack', stat="identity") + 
     
     theme +
@@ -290,7 +313,7 @@ renderPlot({
                      point.padding = 0, max.iter=3000, show.legend=F)
 
   # Plots
-  grid.arrange(grobs=list(plt1, plt2, plt3), ncol=1)
+  grid.arrange(grobs=list(plt1, plt2a, plt2b, plt3), ncol=1)
 }, height=1000)
 ```
 
